[project]
name = "proyecto-desercion"
version = "0.1.0"
description = "Sistema de predicción de deserción estudiantil con machine learning"
authors = [
    {name = "Santiago Ruge"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.10"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
pandas = "^2.2.3"
numpy = "^2.2.4"
scikit-learn = "^1.6.1"
joblib = "^1.4.2"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
streamlit = "^1.44.1"
requests = "^2.32.3"
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

